# sylloop

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts  wdio.conf.ts
.agents/skills/bump-sylloop-version/: SKILL.md
.agents/skills/bump-sylloop-version/agents/: openai.yaml
.agents/skills/bump-sylloop-version/scripts/: collect-release-context.mjs
.agents/skills/capture-echo-screenshots/: SKILL.md
.agents/skills/capture-echo-screenshots/agents/: openai.yaml
.agents/skills/capture-echo-screenshots/scripts/: capture-echo-screenshots.ps1  capture-screenshots.e2e.ts  focus-echo-window.ps1
.agents/skills/capture-sylloop-screenshots/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
e2e/specs/: player.e2e.ts
scripts/: classify-ci-change.mjs  classify-ci-change.test.mjs  ffmpeg-lock.json  ffmpeg-lock.test.mjs  macos-signing.test.mjs  prepare-ffmpeg.mjs  prepare-ffmpeg.ps1  prepare-ffmpeg.sh  prepare-test-fixtures.ps1  release-context.test.mjs  release-manifest.mjs  release-manifest.test.mjs  smoke-install.ps1  smoke-macos-dmg.sh  verify-ffmpeg-resource.mjs  version.mjs  version.test.mjs
src/: App.analysis.test.tsx  App.fullscreen.test.tsx  App.help.test.tsx  App.loopMode.test.tsx  App.playlist.test.tsx  App.selectionLoop.test.tsx  App.settings.test.tsx  App.tsx  App.version.test.tsx  i18n.test.tsx  i18n.tsx  store.test.ts  store.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppErrorBoundary.tsx  BrandMark.tsx  PinIcon.test.tsx  PinIcon.tsx  SettingsModal.cache.test.tsx  SettingsModal.tsx
src/lib/: externalLinks.test.ts  externalLinks.ts  playlist.test.ts  playlist.ts  viteWatchConfig.test.ts
(+4 files in other folders)
