[package]
name = "sylloop"
version = "0.2.0"
description = "A focused media player for language learners"
authors = ["Sylloop contributors"]
edition = "2021"

[lib]
name = "sylloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "=2.5.4"
thiserror = "2"
tauri-plugin-wdio = { version = "1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
